--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
       "node": "^20.5.1",
       "pg": "^8.11.3",
       "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "node server.js",
+        "build": "npm run build"
     }
 }
