--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-      "body-parser": "^1.20.2",
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "node": "^20.5.1",
-      "pg": "^8.11.3",
-      "web-vitals": "^2.1.4"
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "node": "^20.5.1",
+        "path": "^0.12.7",
+        "pg": "^8.11.3",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "node server.js",
