--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "mongodb": "^6.1.0",
         "node": "^20.5.1",
         "path": "^0.12.7",
         "pg": "^8.11.3",
