--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "scripts": {
         "start": "node server.js",
         "build": "npm run build"
+    },
+    "engines": {
+        "node": ">=16.20.1"
     }
 }
